preprocesser update(val data)

--- a/PreProcessing.ipynb
+++ b/PreProcessing.ipynb
@@ -10,7 +10,6 @@
     "import cv2\n",
     "import numpy as np\n",
     "from sklearn.utils import shuffle\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from img_pre import img_cropper"
    ]
   },
@@ -23,11 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "path= \"./data\"\n",
+    "\n",
     "train_file_0= os.listdir(path+ \"/train/NORMAL\")\n",
     "train_file_1= os.listdir(path+ \"/train/PNEUMONIA\")\n",
     "test_file_0= os.listdir(path+ \"/test/NORMAL\")\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,27 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test, y_train= shuffle(X_full, y_full, random_state= 42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## separate train, val data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_val, y_train, y_val= train_test_split(X_full, y_full, test_size= 0.25)"
+    "X_train, y_train= shuffle(X_full, y_full, random_state= 42)"
    ]
   },
   {
@@ -152,19 +136,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"./array/X_train\", X_train)\n",
-    "np.save(\"./array/y_train\", y_train)\n",
-    "np.save(\"./array/X_val\", X_val)\n",
-    "np.save(\"./array/y_val\", y_val)"
+    "np.save(\"./array/y_train\", y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## set test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +209,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"./array/X_test\", X_test)\n",
     "np.save(\"./array/y_test\", y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## set val data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= \"./data\"\n",
+    "\n",
+    "val_file_0= os.listdir(path+ \"/val/NORMAL\")\n",
+    "val_file_1= os.listdir(path+ \"/val/PNEUMONIA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in val_file_0:\n",
+    "    img_cropper(file, path+ \"/val/NORMAL/\", \"./data_pre/val/NORMAL/\")\n",
+    "for file in val_file_1:\n",
+    "    img_cropper(file, path+ \"/val/PNEUMONIA/\", \"./data_pre/val/PNEUMONIA/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path= \"./data_pre\"\n",
+    "\n",
+    "val_file_0= os.listdir(path+ \"/val/NORMAL\")\n",
+    "val_file_1= os.listdir(path+ \"/val/PNEUMONIA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_val_full= 0\n",
+    "check= False\n",
+    "\n",
+    "for file in train_file_0:\n",
+    "    img_in= cv2.imread(path+ \"/val/NORMAL/\"+ file, cv2.IMREAD_GRAYSCALE)\n",
+    "    img_round= img_in/255\n",
+    "    img_resh= img_round.reshape((224, 224, 1))\n",
+    "    img= img_resh.reshape((1, )+ img_resh.shape)\n",
+    "    \n",
+    "    if(check== False):\n",
+    "        X_val_full= img\n",
+    "        check= True\n",
+    "    else:\n",
+    "        X_val_full= np.vstack((X_val_full, img))\n",
+    "\n",
+    "for file in train_file_1:\n",
+    "    img_in= cv2.imread(path+ \"/val/PNEUMONIA/\"+ file, cv2.IMREAD_GRAYSCALE)\n",
+    "    img_round= img_in/255\n",
+    "    img_resh= img_round.reshape((224, 224, 1))\n",
+    "    img= img_resh.reshape((1, )+ img_resh.shape)\n",
+    "    X_val_full= np.vstack((X_val_full, img))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_val= np.array([0]* len(val_file_0))\n",
+    "y_val_1= np.array([1]* len(val_file_1))\n",
+    "y_val= np.append(y_val, y_val_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_val, y_val= shuffle(X_val_full, y_val, random_state= 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"./array/X_val\", X_val)\n",
+    "np.save(\"./array/y_val\", y_val)"
    ]
   },
   {
